test/integration/syntax-errors/services/errorService.js
module.exports = function(container) {
  oh fucking shit
};